--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,11 @@
 .gradle
 /local.properties
 .DS_Store
-/build
 /captures
 .externalNativeBuild
 .idea/
-app/build/
+*/build/
 build/
-lib-ScrollDetector/build
 gradle/
 gradlew
 gradlew.bat
