--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,5 +19,6 @@ android {
 }
 
 dependencies {
+    compile project(':lib-ScrollDetector')
     compile 'com.android.support:appcompat-v7:25.1.0'
 }
